<resources>
    <string name="app_name">Delivery Tiger</string>
    <string name="cd">image</string>
    <string name="app_title">বাংলাদেশের প্রথম লজিস্টিক মার্কেটপ্লেস</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset your password</string>
    <string name="write_proper_phone_number_recharge">সঠিক ফোন নাম্বার লিখুন</string>
    <string name="write_name">কোম্পানির নাম লিখুন</string>
    <string name="write_correct_name">শুধু লেটার এবং  ডিজিট ব্যবহার করতে পারবেন</string>
    <string name="write_phone_number">মোবাইল নাম্বার লিখুন</string>
    <string name="write_alt_phone_number">বিকল্প মোবাইল নাম্বার লিখুন</string>
    <string name="write_yr_name">কাস্টমারের নাম লিখুন</string>
    <string name="write_yr_address">বিস্তারিত ঠিকানা লিখুন (বাড়ি/রোড/গ্রাম/হোল্ডিং), ন্যূনতম ১৫ ডিজিট</string>
    <string name="select_yr_delivery_date">কালেকশনের তারিখ নির্বাচন করুন</string>
    <string name="select_yr_time_slot">টাইম স্লট নির্বাচন করুন </string>
    <string name="write_email_address">আপনার ইমেইল এড্রেস লিখুন</string>
    <string name="update_success">সফলভাবে আপডেট হয়েছে</string>
    <string name="ef_content_desc_image" translatable="false">Image</string>

    <string name="select_dist">জেলা নির্বাচন করুন</string>
    <string name="select_thana">থানা নির্বাচন করুন</string>
    <string name="select_aria">এরিয়া/পোস্ট অফিস সিলেক্ট করুন</string>
    <string name="no_aria">এরিয়া/পোস্ট অফিস নেই</string>
    <string name="service_info_dummy_data"> <font color='#ed1c24'>২৪ ঘন্টায়</font><font color='#000000'>(১০০ টাকা)</font><font color='#ed1c24'> ঢাকা </font><font color='#000000'>(৩৫ টাকা)</font></string>

    <string name="api_connect_error">দুঃখিত, এই মুহূর্তে আমাদের সার্ভার কানেকশনে সমস্যা হচ্ছে "\n" কিছুক্ষণ পর আবার চেষ্টা করুন</string>
    <string name="error_msg">দুঃখিত,কিছুক্ষণ পর আবার চেষ্টা করুন</string>
    <string name="write_password">পাসওয়ার্ড লিখুন</string>
    <string name="match_pass">পাসওয়ার্ড ম্যাচ করেনি</string>
    <string name="success_in_signin">সফলভাবে সাইন আপ করেছেন</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password_pattern">পাসওয়ার্ডে কমপক্ষে একটি নম্বর, একটি অক্ষর, দৈর্ঘ্যে ৮-২০ হতে হবে</string>

    <string name="give_order_id">অর্ডার আইডি / মোবাইল নম্বর লিখুন</string>
    <string name="give_right_order_id">সঠিক অর্ডার আইডি লিখুন</string>
    <string name="default_notification_channel_id">Promotion</string>
    <string name="default_notification_channel_id_instant_payment">Instant Payment</string>
    <string name="notification_channel_chat">Chat</string>
    <string name="notification_channel_chat_name">Chat</string>
    <string name="notification_channel_loan_survey">Chat</string>

    <string name="waiting">অপেক্ষা করুন</string>
    <string name="dashboard_spinner_temp">মাস অথবা ডেট রেঞ্জ সিলেক্ট করুন</string>


    <string-array name="features_list">
        <item>৬৪ জেলা শহর ও ৪৯২ উপজেলায় মাত্র ২৫ টাকায় ডেলিভারি</item>
        <item>COD চার্জ মাত্র ১.৫%</item>
        <item>কোন রিটার্ন চার্জ নাই</item>
        <item>আপনার ঠিকানা থেকে প্রোডাক্ট কালেকশন</item>
        <item>৭ কার্যদিবসের মধ্যে পেমেন্ট</item>
        <item>অনলাইনে পার্সেল ট্র্যাকিং সুবিধা</item>
    </string-array>

    <string-array name="spinner_array_weight">
        <item>ওজন (কেজি)</item>
    </string-array>
    <string-array name="spinner_array_package">
        <item>প্যাকেজিং</item>
    </string-array>
    <string-array name="spinner_array_collection_location">
        <item>পিক আপ লোকেশন</item>
    </string-array>
    <string-array name="arrayMonth">
        <item>মাস নির্বাচন</item>
    </string-array>
    <string-array name="arrayYear">
        <item>বছর নির্বাচন</item>
    </string-array>
    <string-array name="spinner_array_select_thana">
        <item>Thana</item>
    </string-array>

    <string-array name="spinner_array_select_aria">
        <item>Aria/Post Office</item>
    </string-array>

    <string-array name="orderType">
        <item>সকল অর্ডার টাইপ</item>
        <item>শুধু ডেলিভারি (প্রি-পেইড)</item>
        <item>ডেলিভারি + টাকা কালেকশন (COD)</item>
    </string-array>
    <string-array name="registration_known_source">
        <item>ডেলিভারি টাইগার সম্পর্কে শুনেছেন</item>
        <item>ফেসবুক</item>
        <item>পরিচিত কারো থেকে</item>
        <item>কল সেন্টারের কল থেকে</item>
        <item>ইমেইল থেকে</item>
    </string-array>
    <string-array name="registration_known_source_value">
        <item>ডেলিভারি টাইগার সম্পর্কে শুনেছেন</item>
        <item>From Facebook</item>
        <item>From Familiar person</item>
        <item>From Call centre</item>
        <item>From Email</item>
    </string-array>
    <string-array name="pickup_district">
        <item>"জেলা নির্বাচন করুন"</item>
    </string-array>
    <string-array name="collection_time">
        <item>"সিলেক্ট কালেকশন টাইম"</item>
    </string-array>
    <string name="file_provider_authority" translatable="false">com.bd.deliverytiger.app.fileprovider</string>
    <string name="facebook_app_id">227253438942250</string>

    <string name="cod_collection">COD - পরিশোধিত</string>
    <string name="service_bill_pay">বকেয়া সার্ভিস চার্জ (প্রি-পেইড)</string>
    <string name="payment_statement">স্টেটমেন্ট - COD পেমেন্ট</string>
    <string name="balance_load_history_statement">ব্যালেন্স লোড স্টেটমেন্ট</string>
    <string name="payment_request">পেমেন্ট রিকোয়েস্ট</string>
    <string name="return_statement">রিটার্ন স্টেটমেন্ট</string>
    <string name="bill_pay_history">স্টেটমেন্ট - পরিশোধিত সার্ভিস চার্জ</string>
    <string name="lead_management">লিড ম্যানেজমেন্ট</string>
    <string name="termsCondition">শর্তাবলী (Terms &amp; Conditions)</string>
    <string name="expressService">জেলা ভিত্তিক সার্ভিস ও স্পিড</string>
    <string name="nearby_hub">নিকটস্থ হাব</string>
    <string name="collection_history">আজকের কালেকশন</string>
    <string name="referral">রেফার করুন</string>
    <string name="orderType1">শুধু ডেলিভারি (প্রি-পেইড)</string>
    <string name="orderType2">ডেলিভারি+টাকা কালেকশন (COD)</string>
    <string name="voucher">ডিসকাউন্ট ভাউচার এপ্লাই করুন</string>
    <string name="pickupType1">&#160;&#160;&#160;&#160;&#160;&#160;হাবে ড্রপ&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="pickupType2">কালেক্টর pick-up*</string>
    <string name="instant_payment">ইনস্ট্যান্ট পেমেন্ট আপডেট</string>
    <string name="quick_booking_list">সকল কুইক বুকিং</string>
    <string name="web_view">ওয়েব</string>

    <string name="file_provider">com.ajkerdeal.app.ajkerdealseller.fileprovider</string>
    <string name="pick_single">ছবি সিলেক্ট করুন</string>
    <string name="empty_msg">কোনো তথ্য পাওয়া যায়নি</string>
    <string name="empty_msg1">কোনো লাইভ শিডিউল নেই\nনতুন শিডিউল অ্যাড করুন</string>

    <string-array name="order_management_filter">
        <item>বুকিং কোড</item>
        <item>ডিল নাম</item>
        <item>ডিল কোড</item>
        <item>ফোন নাম্বার</item>
    </string-array>

    <string name="offer_advance_success">আপনাকে বিকাশ পেমেন্ট লিংক সহ একটি এসএমএস ও ইমেইল করা হয়েছে। এটি আপনার এই অর্ডারের নির্দিস্ট কাস্টমারের সাথে শেয়ার করুন। কাস্টমার লিংক ব্যবহার করে বিকাশ পেমেন্ট করলেই আপনার কাছ থেকে প্রোডাক্ট ডেলিভারির জন্য কালেক্ট করা হবে। ১২ ঘন্টার মধ্যে কাস্টমারকে পেমেন্ট সম্পন্ন করার অনুরোধ করুন।</string>
    <string name="instruction">নির্দেশনা</string>
    <string name="ok">ঠিক আছে</string>
    <string name="cancel">ক্যানসেল</string>
    <string name="yes_delete">হ্যাঁ, ডিলিট</string>

    <string name="area_close">জেলায়/থানায়/এরিয়ায় ডেলিভারি সার্ভিস সাময়িকভাবে বন্ধ রয়েছে।</string>

    <string name="why_location_required">To assign order based on your pickup location automatically, allow Delivery Tiger to use your location data.</string>
    <string name="how_location_used">Delivery Tiger will use location data to order info on rider app and overall operation progress.</string>

    <string name="home">হোম</string>
    <string name="track">ট্র্যাক</string>
    <string name="parcel_tracking">পার্সেল ট্র্যাকিং</string>
    <string name="live">লাইভ</string>
    <string name="magnet">চুম্বক</string>
    <string name="dashboard">ড্যাশবোর্ড</string>
    <string name="order_track">অর্ডার ট্র্যাকিং</string>
    <string name="balance_load">ব্যালেন্স লোড</string>
    <string name="profile">প্রোফাইল আপডেট</string>
    <string name="delivery_details">ডেলিভারি ডিটেলস</string>
    <string name="delivery_charge_calculator">ডেলিভারি চার্জ ক্যালকুলেটর</string>
    <string name="privacy_policy">প্রাইভেসি পলিসি</string>
    <string name="contact">যোগাযোগ</string>
    <string name="tiger">ডেলিভারি টাইগার</string>
    <string name="faq">FAQ</string>
    <string name="payment">পেমেন্ট</string>
    <string name="all_order">সব অর্ডার</string>
    <string name="new_order">নতুন অর্ডার</string>
    <string name="service_charge">সার্ভিস চার্জ</string>
    <string name="order_success">অর্ডার সাকসেস</string>
    <string name="complain">কমপ্লেইন</string>
    <string name="notification">নোটিফিকেশন</string>
    <string name="payment_details">পেমেন্ট ডিটেইলস</string>
    <string name="order">অর্ডার</string>
    <string name="loan_survey">লোনের জন্য আবেদন</string>
    <string name="pickup_options">বেছে নিন</string>
    <string name="submit">সাবমিট</string>
    <string name="shohag_vai_mobile">01844503545</string>
    <string name="rezu_vai_mobile">01688117286</string>
    <string name="sourov_vai_mobile">01811487984</string>

    <string-array name="pick_options">
        <item>"বেছে নিন"</item>
    </string-array>

</resources>
