<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_home"
    app:startDestination="@id/nav_dashboard"
    >

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.bd.deliverytiger.app.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/nav_dashboard_CODCollection"
            app:destination="@id/nav_cod_collection"/>

        <action
            android:id="@+id/nav_dashboard_billPay"
            app:destination="@id/nav_bill_pay"/>

        <action
            android:id="@+id/nav_dashboard_referral"
            app:destination="@id/nav_referral"/>

    </fragment>

    <fragment
        android:id="@+id/nav_order_tracking"
        android:name="com.bd.deliverytiger.app.ui.order_tracking.OrderTrackingFragment"
        android:label="@string/order_track"
        tools:layout="@layout/fragment_order_tracking"
        />

    <fragment
        android:id="@+id/nav_lead_management"
        android:name="com.bd.deliverytiger.app.ui.lead_management.LeadManagementFragment"
        android:label="@string/lead_management"
        tools:layout="@layout/fragment_lead_management"
        />

    <fragment
        android:id="@+id/nav_balance_load"
        android:name="com.bd.deliverytiger.app.ui.balance_load.BalanceLoadFragment"
        android:label="@string/balance_load"
        tools:layout="@layout/fragment_balance_load"
        />

    <fragment
        android:id="@+id/nav_quick_booking_list"
        android:name="com.bd.deliverytiger.app.ui.quick_order.quick_order_history.QuickOrderListFragment"
        android:label="@string/quick_booking_list"
        tools:layout="@layout/fragment_quick_order_list"
        />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.bd.deliverytiger.app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"
        />


    <fragment
        android:id="@+id/nav_cod_collection"
        android:name="com.bd.deliverytiger.app.ui.cod_collection.CODCollectionFragment"
        android:label="@string/cod_collection"
        tools:layout="@layout/fragment_cod_collection">

        <action
            android:id="@+id/nav_CODCollection_orderTracking"
            app:destination="@id/nav_order_tracking"/>
    </fragment>

    <fragment
        android:id="@+id/nav_bill_pay"
        android:name="com.bd.deliverytiger.app.ui.bill_pay.ServiceBillPayFragment"
        android:label="@string/service_bill_pay"
        tools:layout="@layout/fragment_service_bill_pay">

        <action
            android:id="@+id/nav_CODCollection_navWebView"
            app:destination="@id/nav_web_view"/>
    </fragment>

    <fragment
        android:id="@+id/nav_payment_history"
        android:name="com.bd.deliverytiger.app.ui.payment_statement.PaymentStatementFragment"
        android:label="@string/payment_statement"
        tools:layout="@layout/fragment_payment_statement">

        <action
            android:id="@+id/nav_paymentHistory_paymentHistoryDetails"
            app:destination="@id/nav_payment_history_details"/>
    </fragment>

    <fragment
        android:id="@+id/nav_payment_history_details"
        android:name="com.bd.deliverytiger.app.ui.payment_statement.details.PaymentStatementDetailFragment"
        android:label="@string/payment_statement"
        tools:layout="@layout/fragment_payment_statement_detail">

        <action
            android:id="@+id/nav_paymentHistory_paymentHistoryDetails"
            app:destination="@id/nav_web_view"/>
    </fragment>

    <fragment
        android:id="@+id/nav_bill_pay_history"
        android:name="com.bd.deliverytiger.app.ui.bill_pay_history.ServiceBillPayHistoryFragment"
        android:label="@string/bill_pay_history"
        tools:layout="@layout/fragment_service_bill_pay_history">
    </fragment>

    <fragment
        android:id="@+id/nav_return_statement"
        android:name="com.bd.deliverytiger.app.ui.return_statement.ReturnStatementFragment"
        android:label="@string/return_statement"
        tools:layout="@layout/fragment_return_statement">

        <action
            android:id="@+id/nav_returnStatement_returnStatementDetails"
            app:destination="@id/nav_return_statement_details"/>
    </fragment>

    <fragment
        android:id="@+id/nav_return_statement_details"
        android:name="com.bd.deliverytiger.app.ui.return_statement.details.ReturnStatementDetailsFragment"
        android:label="@string/return_statement"
        tools:layout="@layout/fragment_return_statement_details">
    </fragment>


    <fragment
        android:id="@+id/nav_balance_load_history"
        android:name="com.bd.deliverytiger.app.ui.balance_load_history.BalanceLoadHistoryFragment"
        android:label="@string/balance_load_history_statement"
        tools:layout="@layout/fragment_balance_load_history">
    </fragment>

    <fragment
        android:id="@+id/nav_payment_request"
        android:name="com.bd.deliverytiger.app.ui.payment_request.InstantPaymentUpdateFragment"
        android:label="@string/instant_payment"
        tools:layout="@layout/fragment_instant_payment_update">
    </fragment>

    <fragment
        android:id="@+id/nav_web_view"
        android:name="com.bd.deliverytiger.app.ui.web_view.WebViewFragment"
        android:label="@string/web_view"
        tools:layout="@layout/fragment_web_view"
        />

    <fragment
        android:id="@+id/nav_referral"
        android:name="com.bd.deliverytiger.app.ui.referral.ReferralFragment"
        android:label="@string/referral"
        tools:layout="@layout/fragment_profile"
        />

    <fragment
        android:id="@+id/nav_change_calculator"
        android:name="com.bd.deliverytiger.app.ui.charge_calculator.DeliveryChargeCalculatorFragment"
        android:label="@string/delivery_charge_calculator"
        tools:layout="@layout/fragment_delivery_charge_calculator"
        />

</navigation>