<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <TextView
        android:id="@+id/terms_sheet_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="কালেকশন টাইপ"
        android:textColor="@color/black_80"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
         />

    <View
        android:id="@+id/terms_sheet_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator"
        android:layout_marginTop="8dp"
        />

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/toggleButtonPickupGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:justifyContent="center"
        android:layout_marginTop="16dp"
        >

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/toggleButtonPickup1"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            app:toggle_text="@string/pickupType1" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/toggleButtonPickup2"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            app:toggle_text="@string/pickupType2" />

    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pickupAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerCollectionLocation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_view_height"
            android:background="@drawable/bg_spinner"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown"
            android:theme="@style/custom_spinner_style"
            app:layout_constraintTop_toTopOf="parent"
            tools:entries="@array/spinner_array_collection_location" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/cd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/spinnerCollectionLocation"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_drop_down" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/cd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/spinnerCollectionLocation"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star"
            app:tint="@color/red" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        />

</LinearLayout>